static/home.css
* {
  font-family: Helvetica, Arial, sans-serif;
  color: #333;
}
html, body {
  width: 100%;
  height: 100%;
  margin: 0 auto;
  padding: 10px;
}

.non-footer {
  margin: 0;
  padding: 0 0 20px 0;
  box-sizing: border-box;
  height: 100%;
  width: 100%;
  overflow-y: auto;
  overflow-x: hidden;
}

.top {
  width: 100%;
  text-align: center;
  padding: 60px 0 20px 0;
}

.title {
  margin-top: 0;
}

.center {
  position: relative;
  top: 30%;
  text-align: center;
}

.bottom {
  height: calc(60% - 20px);
  padding-bottom: 70px;
}

#user-data {
  list-style-type: none;
  padding-top: 10px;
}

#user-data .map{
  display: inline-block;
  margin-top: 5px;
}

.footer {
  margin: 0;
  padding: 0 6px;
  box-sizing: border-box;
  position: fixed;
  bottom: 0;
  width: 100%;
  font-size: 11pt;
  line-height: 20px;
  text-align: center;
  /* ungodly gradient stuff */
  background: -moz-linear-gradient(top,  rgba(255,255,255,0) 0%, rgba(255,255,255,0.07) 3%, rgba(255,255,255,0.23) 10%, rgba(255,255,255,1) 32%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(3%,rgba(255,255,255,0.07)), color-stop(10%,rgba(255,255,255,0.23)), color-stop(32%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.07) 3%,rgba(255,255,255,0.23) 10%,rgba(255,255,255,1) 32%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.07) 3%,rgba(255,255,255,0.23) 10%,rgba(255,255,255,1) 32%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.07) 3%,rgba(255,255,255,0.23) 10%,rgba(255,255,255,1) 32%); /* IE10+ */
  background: linear-gradient(to bottom,  rgba(255,255,255,0) 0%,rgba(255,255,255,0.07) 3%,rgba(255,255,255,0.23) 10%,rgba(255,255,255,1) 32%); /* W3C */
}
.footer-left {
  float: left;
}

.bottom .row {
  height: 100%;
}
.bottom .col-sm-12 {
  height: 100%;
}
.history {
  list-style-type: none;
  margin: 0;
  padding: 0;
  height: 100%;
  padding-bottom: 70px;
}

.history li {
  margin: 0 20px 10px 20px;
  padding: 5px;
  box-sizing: border-box;
  width: calc(100% - 40px);
}

.history > li {
  border: solid 1px #ccc;
  border-radius: 8px;
  box-shadow: 0 6px 12px #ccc;
  margin-bottom: 15px
}

.history li.error {
  color: red;
}

.history li .query {
  font-size: 18px;
  color: #67a;
}

.history li .query:before {
  content: "“";
  color: inherit;
}

.history li .query:after {
  content: "”";
  color: inherit;
}

.history li .result {
  font-size: 20px;
  padding: 5px 15px;
  width: 100%;
  box-sizing: border-box;
  color: inherit;
}

.history li .data {
  margin-bottom: 10px;
  font-style: italic;
  font-size: 12px;
  overflow-y: hidden;
  position: relative;
  padding-left: 20px;
  box-sizing: border-box;
  width: 100%;
  max-height: 15px;
  transition: 0.6s max-height cubic-bezier(0, 1.05, 0, 1);
  -o-transition: 0.6s max-height cubic-bezier(0, 1.05, 0, 1);
  -moz-transition: 0.6s max-height cubic-bezier(0, 1.05, 0, 1);
  -webkit-transition: 0.6s max-height cubic-bezier(0, 1.05, 0, 1);
}

.history li .data:before {
  content: '▶';
  font-style: normal;
  font-size: 15px;
  color: #333;
  position: absolute;
  top: 0;
  left: 0;
}

.history li .data.expanded {
  max-height: 6000px;
  transition: 0.9s max-height ease;
  -o-transition: 0.9s max-height ease;
  -moz-transition: 0.9s max-height ease;
  -webkit-transition: 0.9s max-height ease;
}

.history li .data.expanded:before {
  content: '▼';
  font-style: normal;
  font-size: 15px;
  color: #333;
  position: absolute;
  top: 0;
  left: 0;
}

@media screen and (max-width: 400px) {
  .title {
    font-size: 20px;
  }
  .prompt {
    height: 20px;
    width: 80%;
  }
}

